--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,34 @@
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins-v20-latin-300.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins-v20-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 900;
+    src: url('../fonts/poppins-v20-latin-900.woff2') format('woff2');
+}
 :root{
     --color-primary-light: #FAF4EA;
     --color-primary-dark: #31261A;
@@ -7,12 +38,11 @@
     --color-secondary: #465929;
 }
 body{
+    font-family: Poppins, sans-serif;
     color: var(--color-primary-dark);
     font-size: 18px;
     font-weight: 400;
-    font-family: Poppins, sans-serif;
     line-height: 1.5;
-
 }
 ul{
     list-style-type: none;
@@ -47,12 +77,12 @@ ul{
     color: var(--color-secondary);
 }
 
-.header-link{
+.link{
     text-align: center; 
     color: var(--color-primary-light); 
     text-decoration: none;
 }
-.header-link:hover{
+.link:hover{
     color: var(--color-primary);
     font-weight: 600;
 }
@@ -70,8 +100,7 @@ ul{
     background-color: var(--color-primary);
 }
 .hero-section-item{
-    color: var(--color-primary-light); 
-    font-family: Poppins, sans-serif;
+    color: var(--color-primary-light);
     font-size: 20px;
     font-weight: 300;
 }
@@ -82,12 +111,6 @@ ul{
     font-size: 64px;
     font-weight: 900;
     line-height: 1.3;
-}
-main{
-    color: var(--color-primary-dark);
-    font-size: 18px;
-    font-weight: 400;
-    font-family: Poppins;
 }
 .accent-main{
     font-weight: 600;
@@ -107,4 +130,16 @@ main{
     color: var(--color-primary-light);
     font-size: 14px;
     font-weight: 300;
+}
+
+.footer-contacts{
+    color: var(--color-primary-light);
+    text-decoration: none;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
+.footer-contacts:hover {
+    font-weight: 600;
 }
